lowcode-formula-parent/lowcode-formula-parser/src/main/resources/g4/FxExprParser.g4
parser grammar FxExprParser;

options {
    tokenVocab = FxExprLexer;
    superClass = FxExprParserBase;
}

program
    : expressionStatement EOF
    ;

expressionStatement
    : literal                                                              # LiteralExpression
    ;

literal
    : StringLiteral
    ;
